fixed firefox frontend, collapsable main controls but still needs styling to look nice

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -27,7 +27,7 @@ header .search
   float: right
   text-decoration: none
   color: #777
-  
+
 
 #logo
   display: inline-block
@@ -160,11 +160,8 @@ cite.metric a
   background: #eee;
   color: #000
 
-.linechart
-  position: relative
-  z-index: 1
-  height: 300px
-  margin-bottom: 60px
+.error
+  background: #ccc
 
 .marks
   padding: 10px 0px 0px 0px !important
@@ -236,6 +233,10 @@ cite.metric a
 
 .intro
   animation: intro 2s
+
+[v-cloak] {
+  animation: outro 1s, loader 1.5s infinite
+}
 
 @keyframes intro
   0%
